// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropzone withStyles should render correctly 1`] = `
<WithStyles(WithId)
  acceptedFiles={Array []}
  fileList={
    Array [
      Object {
        "name": "Screenshot 2019-12-05 at 17.15.43.png",
        "size": 141,
        "type": "image/png",
      },
      Object {
        "name": "Screenshot 2019-12-05 at 12.03.13.png",
        "size": 875,
        "type": "image/png",
      },
    ]
  }
  id="dropzone1"
  labels={
    Object {
      "acceptedFiles": "Accepted files:",
      "drag": "Drag and drop or",
      "dropFiles": "Drop files here",
      "dropzone": "Label",
      "fileSizeError": "The file exceeds the maximum upload size",
      "fileTypeError": "File type not allowed for upload",
      "progressConjunction": "of",
      "removeFileButtonLabel": "Remove File",
      "selectFiles": "Select files",
      "sizeWarning": "Max. file size:",
    }
  }
  maxFileSize={1}
  onDragEnter={[MockFunction]}
  onDragLeave={[MockFunction]}
  onDropCapture={[MockFunction]}
  onFileRemoved={[MockFunction]}
  onFilesAdded={[MockFunction]}
>
  <WithId
    acceptedFiles={Array []}
    classes={
      Object {
        "dragAction": "HvFileUploaderDropZone-dragAction-48",
        "dragText": "HvFileUploaderDropZone-dragText-54",
        "dropArea": "HvFileUploaderDropZone-dropArea-50",
        "dropZoneAreaIcon": "HvFileUploaderDropZone-dropZoneAreaIcon-53",
        "dropZoneAreaLabels": "HvFileUploaderDropZone-dropZoneAreaLabels-52",
        "dropZoneContainer": "HvFileUploaderDropZone-dropZoneContainer-45",
        "dropZoneContainerDisabled": "HvFileUploaderDropZone-dropZoneContainerDisabled-47",
        "dropZoneLabel": "HvFileUploaderDropZone-dropZoneLabel-46",
        "dropZoneLabelsGroup": "HvFileUploaderDropZone-dropZoneLabelsGroup-51",
        "inputArea": "HvFileUploaderDropZone-inputArea-49",
        "selectFilesText": "HvFileUploaderDropZone-selectFilesText-55",
      }
    }
    fileList={
      Array [
        Object {
          "name": "Screenshot 2019-12-05 at 17.15.43.png",
          "size": 141,
          "type": "image/png",
        },
        Object {
          "name": "Screenshot 2019-12-05 at 12.03.13.png",
          "size": 875,
          "type": "image/png",
        },
      ]
    }
    id="dropzone1"
    labels={
      Object {
        "acceptedFiles": "Accepted files:",
        "drag": "Drag and drop or",
        "dropFiles": "Drop files here",
        "dropzone": "Label",
        "fileSizeError": "The file exceeds the maximum upload size",
        "fileTypeError": "File type not allowed for upload",
        "progressConjunction": "of",
        "removeFileButtonLabel": "Remove File",
        "selectFiles": "Select files",
        "sizeWarning": "Max. file size:",
      }
    }
    maxFileSize={1}
    onDragEnter={[MockFunction]}
    onDragLeave={[MockFunction]}
    onDropCapture={[MockFunction]}
    onFileRemoved={[MockFunction]}
    onFilesAdded={[MockFunction]}
  >
    <DropZone
      acceptedFiles={Array []}
      classes={
        Object {
          "dragAction": "HvFileUploaderDropZone-dragAction-48",
          "dragText": "HvFileUploaderDropZone-dragText-54",
          "dropArea": "HvFileUploaderDropZone-dropArea-50",
          "dropZoneAreaIcon": "HvFileUploaderDropZone-dropZoneAreaIcon-53",
          "dropZoneAreaLabels": "HvFileUploaderDropZone-dropZoneAreaLabels-52",
          "dropZoneContainer": "HvFileUploaderDropZone-dropZoneContainer-45",
          "dropZoneContainerDisabled": "HvFileUploaderDropZone-dropZoneContainerDisabled-47",
          "dropZoneLabel": "HvFileUploaderDropZone-dropZoneLabel-46",
          "dropZoneLabelsGroup": "HvFileUploaderDropZone-dropZoneLabelsGroup-51",
          "inputArea": "HvFileUploaderDropZone-inputArea-49",
          "selectFilesText": "HvFileUploaderDropZone-selectFilesText-55",
        }
      }
      fileList={
        Array [
          Object {
            "name": "Screenshot 2019-12-05 at 17.15.43.png",
            "size": 141,
            "type": "image/png",
          },
          Object {
            "name": "Screenshot 2019-12-05 at 12.03.13.png",
            "size": 875,
            "type": "image/png",
          },
        ]
      }
      id="dropzone1"
      labels={
        Object {
          "acceptedFiles": "Accepted files:",
          "drag": "Drag and drop or",
          "dropFiles": "Drop files here",
          "dropzone": "Label",
          "fileSizeError": "The file exceeds the maximum upload size",
          "fileTypeError": "File type not allowed for upload",
          "progressConjunction": "of",
          "removeFileButtonLabel": "Remove File",
          "selectFiles": "Select files",
          "sizeWarning": "Max. file size:",
        }
      }
      maxFileSize={1}
      onDragEnter={[MockFunction]}
      onDragLeave={[MockFunction]}
      onDropCapture={[MockFunction]}
      onFileRemoved={[MockFunction]}
      onFilesAdded={[MockFunction]}
    >
      <div
        aria-label="File Dropzone"
        className="HvFileUploaderDropZone-dropZoneLabelsGroup-51"
        id="dropzone1"
      >
        <WithStyles(HvLabel)
          className="HvFileUploaderDropZone-dropZoneLabel-46"
          htmlFor="dropzone1-input-file"
          id="dropzone1-input-file-label"
          label="Label"
        >
          <HvLabel
            className="HvFileUploaderDropZone-dropZoneLabel-46"
            classes={
              Object {
                "childGutter": "HvLabel-childGutter-58",
                "labelDisabled": "HvLabel-labelDisabled-57",
                "root": "HvLabel-root-56",
              }
            }
            htmlFor="dropzone1-input-file"
            id="dropzone1-input-file-label"
            label="Label"
          >
            <WithStyles(ForwardRef)
              className="HvFileUploaderDropZone-dropZoneLabel-46 HvLabel-root-56"
              component="label"
              htmlFor="dropzone1-input-file"
              id="dropzone1-input-file-label"
              variant="highlightText"
            >
              <ForwardRef
                className="HvFileUploaderDropZone-dropZoneLabel-46 HvLabel-root-56"
                classes={
                  Object {
                    "3xlTitle": "HvTypography-3xlTitle-62",
                    "4xlTitle": "HvTypography-4xlTitle-61",
                    "5xlTitle": "HvTypography-5xlTitle-60",
                    "disabledText": "HvTypography-disabledText-75",
                    "highlightText": "HvTypography-highlightText-71",
                    "lTitle": "HvTypography-lTitle-65",
                    "link": "HvTypography-link-74",
                    "mTitle": "HvTypography-mTitle-66",
                    "noWrap": "HvTypography-noWrap-80",
                    "normalText": "HvTypography-normalText-72",
                    "placeholderText": "HvTypography-placeholderText-73",
                    "root": "HvTypography-root-59",
                    "sTitle": "HvTypography-sTitle-67",
                    "sectionTitle": "HvTypography-sectionTitle-70",
                    "selectedNavText": "HvTypography-selectedNavText-76",
                    "vizText": "HvTypography-vizText-77",
                    "vizTextDisabled": "HvTypography-vizTextDisabled-78",
                    "xlTitle": "HvTypography-xlTitle-64",
                    "xsInlineLink": "HvTypography-xsInlineLink-79",
                    "xsTitle": "HvTypography-xsTitle-68",
                    "xxlTitle": "HvTypography-xxlTitle-63",
                    "xxsTitle": "HvTypography-xxsTitle-69",
                  }
                }
                component="label"
                htmlFor="dropzone1-input-file"
                id="dropzone1-input-file-label"
                variant="highlightText"
              >
                <label
                  className="HvFileUploaderDropZone-dropZoneLabel-46 HvLabel-root-56 HvTypography-root-59 HvTypography-highlightText-71"
                  htmlFor="dropzone1-input-file"
                  id="dropzone1-input-file-label"
                >
                  Label
                </label>
              </ForwardRef>
            </WithStyles(ForwardRef)>
          </HvLabel>
        </WithStyles(HvLabel)>
        <WithStyles(HvInfoMessage)
          id="dropzone1-description"
        >
          <HvInfoMessage
            classes={
              Object {
                "gutter": "HvInfoMessage-gutter-83",
                "infoDisabled": "HvInfoMessage-infoDisabled-82",
                "root": "HvInfoMessage-root-81",
              }
            }
            id="dropzone1-description"
          >
            <WithStyles(ForwardRef)
              className="HvInfoMessage-root-81 HvInfoMessage-gutter-83"
              component="label"
              id="dropzone1-description"
              variant="normalText"
            >
              <ForwardRef
                className="HvInfoMessage-root-81 HvInfoMessage-gutter-83"
                classes={
                  Object {
                    "3xlTitle": "HvTypography-3xlTitle-62",
                    "4xlTitle": "HvTypography-4xlTitle-61",
                    "5xlTitle": "HvTypography-5xlTitle-60",
                    "disabledText": "HvTypography-disabledText-75",
                    "highlightText": "HvTypography-highlightText-71",
                    "lTitle": "HvTypography-lTitle-65",
                    "link": "HvTypography-link-74",
                    "mTitle": "HvTypography-mTitle-66",
                    "noWrap": "HvTypography-noWrap-80",
                    "normalText": "HvTypography-normalText-72",
                    "placeholderText": "HvTypography-placeholderText-73",
                    "root": "HvTypography-root-59",
                    "sTitle": "HvTypography-sTitle-67",
                    "sectionTitle": "HvTypography-sectionTitle-70",
                    "selectedNavText": "HvTypography-selectedNavText-76",
                    "vizText": "HvTypography-vizText-77",
                    "vizTextDisabled": "HvTypography-vizTextDisabled-78",
                    "xlTitle": "HvTypography-xlTitle-64",
                    "xsInlineLink": "HvTypography-xsInlineLink-79",
                    "xsTitle": "HvTypography-xsTitle-68",
                    "xxlTitle": "HvTypography-xxlTitle-63",
                    "xxsTitle": "HvTypography-xxsTitle-69",
                  }
                }
                component="label"
                id="dropzone1-description"
                variant="normalText"
              >
                <label
                  className="HvInfoMessage-root-81 HvInfoMessage-gutter-83 HvTypography-root-59 HvTypography-normalText-72"
                  id="dropzone1-description"
                >
                  Max. file size: 1.00B
                  Accepted files:
                </label>
              </ForwardRef>
            </WithStyles(ForwardRef)>
          </HvInfoMessage>
        </WithStyles(HvInfoMessage)>
      </div>
      <div
        className="HvFileUploaderDropZone-dropZoneContainer-45"
        id="dropzone1-button"
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDrop={[Function]}
        onDropCapture={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex={0}
      >
        <input
          accept=""
          className="HvFileUploaderDropZone-inputArea-49"
          disabled={false}
          id="dropzone1-input-file"
          multiple={true}
          onChange={[Function]}
          onClick={[Function]}
          tabIndex={-1}
          title="Drag and drop or Select files"
          type="file"
        />
        <div
          className="HvFileUploaderDropZone-dropArea-50"
        >
          <Doc
            className="HvFileUploaderDropZone-dropZoneAreaIcon-53"
            color="acce1"
            iconSize="M"
          >
            <HvIconBase
              className="HvFileUploaderDropZone-dropZoneAreaIcon-53"
              iconSize="M"
              name="Doc"
            >
              <div
                className="HvFileUploaderDropZone-dropZoneAreaIcon-53 HvIconBase-root-84 HvIconBase-m-87"
                name="Doc"
              >
                <svg
                  focusable={false}
                  height={32}
                  viewBox="0 0 16 16"
                  width={32}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    className="color0"
                    d="M9 0H2v16h12V5zm3.6 5H9V1.4zm.4 10H3V1h5v5h5z"
                    fill="#414141"
                  />
                </svg>
              </div>
            </HvIconBase>
          </Doc>
          <div
            className="HvFileUploaderDropZone-dropZoneAreaLabels-52"
          >
            <WithStyles(ForwardRef)
              className="HvFileUploaderDropZone-dragText-54"
            >
              <ForwardRef
                className="HvFileUploaderDropZone-dragText-54"
                classes={
                  Object {
                    "3xlTitle": "HvTypography-3xlTitle-62",
                    "4xlTitle": "HvTypography-4xlTitle-61",
                    "5xlTitle": "HvTypography-5xlTitle-60",
                    "disabledText": "HvTypography-disabledText-75",
                    "highlightText": "HvTypography-highlightText-71",
                    "lTitle": "HvTypography-lTitle-65",
                    "link": "HvTypography-link-74",
                    "mTitle": "HvTypography-mTitle-66",
                    "noWrap": "HvTypography-noWrap-80",
                    "normalText": "HvTypography-normalText-72",
                    "placeholderText": "HvTypography-placeholderText-73",
                    "root": "HvTypography-root-59",
                    "sTitle": "HvTypography-sTitle-67",
                    "sectionTitle": "HvTypography-sectionTitle-70",
                    "selectedNavText": "HvTypography-selectedNavText-76",
                    "vizText": "HvTypography-vizText-77",
                    "vizTextDisabled": "HvTypography-vizTextDisabled-78",
                    "xlTitle": "HvTypography-xlTitle-64",
                    "xsInlineLink": "HvTypography-xsInlineLink-79",
                    "xsTitle": "HvTypography-xsTitle-68",
                    "xxlTitle": "HvTypography-xxlTitle-63",
                    "xxsTitle": "HvTypography-xxsTitle-69",
                  }
                }
              >
                <p
                  className="HvFileUploaderDropZone-dragText-54 HvTypography-root-59 HvTypography-normalText-72"
                >
                  Drag and drop or
                  <span
                    className="HvFileUploaderDropZone-selectFilesText-55"
                  >
                     Select files
                  </span>
                </p>
              </ForwardRef>
            </WithStyles(ForwardRef)>
          </div>
        </div>
      </div>
    </DropZone>
  </WithId>
</WithStyles(WithId)>
`;

exports[`Dropzone withStyles should render correctly when disabled 1`] = `
<WithStyles(WithId)
  acceptedFiles={Array []}
  disabled={true}
  fileList={
    Array [
      Object {
        "name": "Screenshot 2019-12-05 at 17.15.43.png",
        "size": 141,
        "type": "image/png",
      },
      Object {
        "name": "Screenshot 2019-12-05 at 12.03.13.png",
        "size": 875,
        "type": "image/png",
      },
    ]
  }
  id="dropzone1"
  labels={
    Object {
      "acceptedFiles": "Accepted files:",
      "drag": "Drag and drop or",
      "dropFiles": "Drop files here",
      "dropzone": "Label",
      "fileSizeError": "The file exceeds the maximum upload size",
      "fileTypeError": "File type not allowed for upload",
      "progressConjunction": "of",
      "removeFileButtonLabel": "Remove File",
      "selectFiles": "Select files",
      "sizeWarning": "Max. file size:",
    }
  }
  maxFileSize={1}
  multiple={false}
  onDragEnter={[MockFunction]}
  onDragLeave={[MockFunction]}
  onDropCapture={[MockFunction]}
  onFileRemoved={[MockFunction]}
  onFilesAdded={[MockFunction]}
>
  <WithId
    acceptedFiles={Array []}
    classes={
      Object {
        "dragAction": "HvFileUploaderDropZone-dragAction-136",
        "dragText": "HvFileUploaderDropZone-dragText-142",
        "dropArea": "HvFileUploaderDropZone-dropArea-138",
        "dropZoneAreaIcon": "HvFileUploaderDropZone-dropZoneAreaIcon-141",
        "dropZoneAreaLabels": "HvFileUploaderDropZone-dropZoneAreaLabels-140",
        "dropZoneContainer": "HvFileUploaderDropZone-dropZoneContainer-133",
        "dropZoneContainerDisabled": "HvFileUploaderDropZone-dropZoneContainerDisabled-135",
        "dropZoneLabel": "HvFileUploaderDropZone-dropZoneLabel-134",
        "dropZoneLabelsGroup": "HvFileUploaderDropZone-dropZoneLabelsGroup-139",
        "inputArea": "HvFileUploaderDropZone-inputArea-137",
        "selectFilesText": "HvFileUploaderDropZone-selectFilesText-143",
      }
    }
    disabled={true}
    fileList={
      Array [
        Object {
          "name": "Screenshot 2019-12-05 at 17.15.43.png",
          "size": 141,
          "type": "image/png",
        },
        Object {
          "name": "Screenshot 2019-12-05 at 12.03.13.png",
          "size": 875,
          "type": "image/png",
        },
      ]
    }
    id="dropzone1"
    labels={
      Object {
        "acceptedFiles": "Accepted files:",
        "drag": "Drag and drop or",
        "dropFiles": "Drop files here",
        "dropzone": "Label",
        "fileSizeError": "The file exceeds the maximum upload size",
        "fileTypeError": "File type not allowed for upload",
        "progressConjunction": "of",
        "removeFileButtonLabel": "Remove File",
        "selectFiles": "Select files",
        "sizeWarning": "Max. file size:",
      }
    }
    maxFileSize={1}
    multiple={false}
    onDragEnter={[MockFunction]}
    onDragLeave={[MockFunction]}
    onDropCapture={[MockFunction]}
    onFileRemoved={[MockFunction]}
    onFilesAdded={[MockFunction]}
  >
    <DropZone
      acceptedFiles={Array []}
      classes={
        Object {
          "dragAction": "HvFileUploaderDropZone-dragAction-136",
          "dragText": "HvFileUploaderDropZone-dragText-142",
          "dropArea": "HvFileUploaderDropZone-dropArea-138",
          "dropZoneAreaIcon": "HvFileUploaderDropZone-dropZoneAreaIcon-141",
          "dropZoneAreaLabels": "HvFileUploaderDropZone-dropZoneAreaLabels-140",
          "dropZoneContainer": "HvFileUploaderDropZone-dropZoneContainer-133",
          "dropZoneContainerDisabled": "HvFileUploaderDropZone-dropZoneContainerDisabled-135",
          "dropZoneLabel": "HvFileUploaderDropZone-dropZoneLabel-134",
          "dropZoneLabelsGroup": "HvFileUploaderDropZone-dropZoneLabelsGroup-139",
          "inputArea": "HvFileUploaderDropZone-inputArea-137",
          "selectFilesText": "HvFileUploaderDropZone-selectFilesText-143",
        }
      }
      disabled={true}
      fileList={
        Array [
          Object {
            "name": "Screenshot 2019-12-05 at 17.15.43.png",
            "size": 141,
            "type": "image/png",
          },
          Object {
            "name": "Screenshot 2019-12-05 at 12.03.13.png",
            "size": 875,
            "type": "image/png",
          },
        ]
      }
      id="dropzone1"
      labels={
        Object {
          "acceptedFiles": "Accepted files:",
          "drag": "Drag and drop or",
          "dropFiles": "Drop files here",
          "dropzone": "Label",
          "fileSizeError": "The file exceeds the maximum upload size",
          "fileTypeError": "File type not allowed for upload",
          "progressConjunction": "of",
          "removeFileButtonLabel": "Remove File",
          "selectFiles": "Select files",
          "sizeWarning": "Max. file size:",
        }
      }
      maxFileSize={1}
      multiple={false}
      onDragEnter={[MockFunction]}
      onDragLeave={[MockFunction]}
      onDropCapture={[MockFunction]}
      onFileRemoved={[MockFunction]}
      onFilesAdded={[MockFunction]}
    >
      <div
        aria-label="File Dropzone"
        className="HvFileUploaderDropZone-dropZoneLabelsGroup-139"
        id="dropzone1"
      >
        <WithStyles(HvLabel)
          className="HvFileUploaderDropZone-dropZoneLabel-134"
          htmlFor="dropzone1-input-file"
          id="dropzone1-input-file-label"
          label="Label"
        >
          <HvLabel
            className="HvFileUploaderDropZone-dropZoneLabel-134"
            classes={
              Object {
                "childGutter": "HvLabel-childGutter-146",
                "labelDisabled": "HvLabel-labelDisabled-145",
                "root": "HvLabel-root-144",
              }
            }
            htmlFor="dropzone1-input-file"
            id="dropzone1-input-file-label"
            label="Label"
          >
            <WithStyles(ForwardRef)
              className="HvFileUploaderDropZone-dropZoneLabel-134 HvLabel-root-144"
              component="label"
              htmlFor="dropzone1-input-file"
              id="dropzone1-input-file-label"
              variant="highlightText"
            >
              <ForwardRef
                className="HvFileUploaderDropZone-dropZoneLabel-134 HvLabel-root-144"
                classes={
                  Object {
                    "3xlTitle": "HvTypography-3xlTitle-150",
                    "4xlTitle": "HvTypography-4xlTitle-149",
                    "5xlTitle": "HvTypography-5xlTitle-148",
                    "disabledText": "HvTypography-disabledText-163",
                    "highlightText": "HvTypography-highlightText-159",
                    "lTitle": "HvTypography-lTitle-153",
                    "link": "HvTypography-link-162",
                    "mTitle": "HvTypography-mTitle-154",
                    "noWrap": "HvTypography-noWrap-168",
                    "normalText": "HvTypography-normalText-160",
                    "placeholderText": "HvTypography-placeholderText-161",
                    "root": "HvTypography-root-147",
                    "sTitle": "HvTypography-sTitle-155",
                    "sectionTitle": "HvTypography-sectionTitle-158",
                    "selectedNavText": "HvTypography-selectedNavText-164",
                    "vizText": "HvTypography-vizText-165",
                    "vizTextDisabled": "HvTypography-vizTextDisabled-166",
                    "xlTitle": "HvTypography-xlTitle-152",
                    "xsInlineLink": "HvTypography-xsInlineLink-167",
                    "xsTitle": "HvTypography-xsTitle-156",
                    "xxlTitle": "HvTypography-xxlTitle-151",
                    "xxsTitle": "HvTypography-xxsTitle-157",
                  }
                }
                component="label"
                htmlFor="dropzone1-input-file"
                id="dropzone1-input-file-label"
                variant="highlightText"
              >
                <label
                  className="HvFileUploaderDropZone-dropZoneLabel-134 HvLabel-root-144 HvTypography-root-147 HvTypography-highlightText-159"
                  htmlFor="dropzone1-input-file"
                  id="dropzone1-input-file-label"
                >
                  Label
                </label>
              </ForwardRef>
            </WithStyles(ForwardRef)>
          </HvLabel>
        </WithStyles(HvLabel)>
        <WithStyles(HvInfoMessage)
          id="dropzone1-description"
        >
          <HvInfoMessage
            classes={
              Object {
                "gutter": "HvInfoMessage-gutter-171",
                "infoDisabled": "HvInfoMessage-infoDisabled-170",
                "root": "HvInfoMessage-root-169",
              }
            }
            id="dropzone1-description"
          >
            <WithStyles(ForwardRef)
              className="HvInfoMessage-root-169 HvInfoMessage-gutter-171"
              component="label"
              id="dropzone1-description"
              variant="normalText"
            >
              <ForwardRef
                className="HvInfoMessage-root-169 HvInfoMessage-gutter-171"
                classes={
                  Object {
                    "3xlTitle": "HvTypography-3xlTitle-150",
                    "4xlTitle": "HvTypography-4xlTitle-149",
                    "5xlTitle": "HvTypography-5xlTitle-148",
                    "disabledText": "HvTypography-disabledText-163",
                    "highlightText": "HvTypography-highlightText-159",
                    "lTitle": "HvTypography-lTitle-153",
                    "link": "HvTypography-link-162",
                    "mTitle": "HvTypography-mTitle-154",
                    "noWrap": "HvTypography-noWrap-168",
                    "normalText": "HvTypography-normalText-160",
                    "placeholderText": "HvTypography-placeholderText-161",
                    "root": "HvTypography-root-147",
                    "sTitle": "HvTypography-sTitle-155",
                    "sectionTitle": "HvTypography-sectionTitle-158",
                    "selectedNavText": "HvTypography-selectedNavText-164",
                    "vizText": "HvTypography-vizText-165",
                    "vizTextDisabled": "HvTypography-vizTextDisabled-166",
                    "xlTitle": "HvTypography-xlTitle-152",
                    "xsInlineLink": "HvTypography-xsInlineLink-167",
                    "xsTitle": "HvTypography-xsTitle-156",
                    "xxlTitle": "HvTypography-xxlTitle-151",
                    "xxsTitle": "HvTypography-xxsTitle-157",
                  }
                }
                component="label"
                id="dropzone1-description"
                variant="normalText"
              >
                <label
                  className="HvInfoMessage-root-169 HvInfoMessage-gutter-171 HvTypography-root-147 HvTypography-normalText-160"
                  id="dropzone1-description"
                >
                  Max. file size: 1.00B
                  Accepted files:
                </label>
              </ForwardRef>
            </WithStyles(ForwardRef)>
          </HvInfoMessage>
        </WithStyles(HvInfoMessage)>
      </div>
      <div
        className="HvFileUploaderDropZone-dropZoneContainer-133 HvFileUploaderDropZone-dropZoneContainerDisabled-135"
        id="dropzone1-button"
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDrop={[Function]}
        onDropCapture={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex={0}
      >
        <input
          accept=""
          className="HvFileUploaderDropZone-inputArea-137"
          disabled={true}
          id="dropzone1-input-file"
          multiple={false}
          onChange={[Function]}
          onClick={[Function]}
          tabIndex={-1}
          title=""
          type="file"
        />
        <div
          className="HvFileUploaderDropZone-dropArea-138"
        >
          <Doc
            className="HvFileUploaderDropZone-dropZoneAreaIcon-141"
            color="atmo4"
            iconSize="M"
          >
            <HvIconBase
              className="HvFileUploaderDropZone-dropZoneAreaIcon-141"
              iconSize="M"
              name="Doc"
            >
              <div
                className="HvFileUploaderDropZone-dropZoneAreaIcon-141 HvIconBase-root-172 HvIconBase-m-175"
                name="Doc"
              >
                <svg
                  focusable={false}
                  height={32}
                  viewBox="0 0 16 16"
                  width={32}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    className="color0"
                    d="M9 0H2v16h12V5zm3.6 5H9V1.4zm.4 10H3V1h5v5h5z"
                    fill="#CCCED0"
                  />
                </svg>
              </div>
            </HvIconBase>
          </Doc>
          <div
            className="HvFileUploaderDropZone-dropZoneAreaLabels-140"
          >
            <WithStyles(ForwardRef)
              className="HvFileUploaderDropZone-dragText-142"
            >
              <ForwardRef
                className="HvFileUploaderDropZone-dragText-142"
                classes={
                  Object {
                    "3xlTitle": "HvTypography-3xlTitle-150",
                    "4xlTitle": "HvTypography-4xlTitle-149",
                    "5xlTitle": "HvTypography-5xlTitle-148",
                    "disabledText": "HvTypography-disabledText-163",
                    "highlightText": "HvTypography-highlightText-159",
                    "lTitle": "HvTypography-lTitle-153",
                    "link": "HvTypography-link-162",
                    "mTitle": "HvTypography-mTitle-154",
                    "noWrap": "HvTypography-noWrap-168",
                    "normalText": "HvTypography-normalText-160",
                    "placeholderText": "HvTypography-placeholderText-161",
                    "root": "HvTypography-root-147",
                    "sTitle": "HvTypography-sTitle-155",
                    "sectionTitle": "HvTypography-sectionTitle-158",
                    "selectedNavText": "HvTypography-selectedNavText-164",
                    "vizText": "HvTypography-vizText-165",
                    "vizTextDisabled": "HvTypography-vizTextDisabled-166",
                    "xlTitle": "HvTypography-xlTitle-152",
                    "xsInlineLink": "HvTypography-xsInlineLink-167",
                    "xsTitle": "HvTypography-xsTitle-156",
                    "xxlTitle": "HvTypography-xxlTitle-151",
                    "xxsTitle": "HvTypography-xxsTitle-157",
                  }
                }
              >
                <p
                  className="HvFileUploaderDropZone-dragText-142 HvTypography-root-147 HvTypography-normalText-160"
                >
                  Drag and drop or
                  <span
                    className="HvFileUploaderDropZone-selectFilesText-143"
                  >
                     Select files
                  </span>
                </p>
              </ForwardRef>
            </WithStyles(ForwardRef)>
          </div>
        </div>
      </div>
    </DropZone>
  </WithId>
</WithStyles(WithId)>
`;
